# DedalCompiler

./: .gitignore  CMakeLists.txt  Debug.h  Doxyfile  LICENSE  Makefile  ParserDecl.h  README.md  dedal.sln  lexer.l  parser.y
dedal/: BaseInstruction.cpp  BaseInstruction.h  Buffer.cpp  Buffer.h  CPU.cpp  CPU.h  Compiler.cpp  Compiler.h  ExecutableCode.h  FileReader.cpp  FileReader.h  InstructionFramework.cpp  InstructionFramework.h  Instructions.cpp  Instructions.h  Interpreter.cpp  Interpreter.h  Parser.cpp  Parser.h  ParserDecl.h  ParserUtils.hpp  Utility.cpp  Utility.h  dedal.vcxproj  dedal.vcxproj.filters  main.cpp
dedal_test/: dedal_test.vcxproj  test.cpp
dedal_test/tests/: test.txt  test1.txt
src/: CMakeLists.txt
src/Aplication/: CMakeLists.txt  main.cpp
src/Application/: CMakeLists.txt  main.cpp
src/Compiler/: CBuffer.h  CCommandContext.h  CCompiler.cpp  CCompiler.h  CMakeLists.txt  Commands.cpp  Commands.h
src/Core/: CInsArg.cpp  CInsArg.h  CMakeLists.txt  Decl.h
src/Generic/: CEvent.hpp  CException.cpp  CException.h  CMakeLists.txt  Configs.hpp  Debug.cpp  Debug.h
src/Parser/: CMakeLists.txt  CParser.cpp  CParser.hpp  CParserHelper.cpp  CParserHelper.hpp  Debug.h  Lexer.l  Parser.y  ParserDecl.hpp  main.cpp
src/UserOutWriter/: CMakeLists.txt  UIO.cpp  UIO.h
src/VirtualMachine/: CExecutor.cpp  CExecutor.h  CFlags.cpp  CFlags.h  CMakeLists.txt  CMemory.h  CProcessor.cpp  CProcessor.h  SCPUState.h
tests/: UnitEntryPoint.as  UnitFunc.as  UnitStackSize.as  UnitTypeDecl.as  input1.as  input2.as
unit_src/: CMakeLists.txt  CompilerUnitTests.hpp  FlagsUnitTests.hpp  MemoryUnitTests.hpp  ParserUnitTests.hpp  test.cpp
